# zkp

./: .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  REAME.md  build.rs  docker-compose.yml
.github/workflows/: cicd.yml
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs
