[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.16"
hex = "0.4.3"
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10.2"


[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"
